--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "create-typescript-package",
-	"description": "A template project for developing & publishing TypeScript packages",
+	"name": "syncmatic",
+	"description": "Lightweight one-way background syncing library",
 	"version": "0.0.0",
 	"author": "StyleShit",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/StyleShit/create-typescript-package"
+		"url": "https://github.com/StyleShit/syncmatic"
 	},
 	"type": "module",
 	"main": "dist/index.cjs",
