--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"concurrently": "^8.2.2",
 		"eslint": "^9.9.0",
 		"globals": "^15.9.0",
+		"jsdom": "^26.0.0",
 		"prettier": "^3.3.3",
 		"tsup": "^8.2.4",
 		"typescript": "^5.5.4",
