--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "syncmatic",
+	"name": "synctactic",
 	"description": "Lightweight one-way background syncing library",
 	"version": "0.0.0",
 	"author": "StyleShit",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/StyleShit/syncmatic"
+		"url": "https://github.com/StyleShit/synctactic"
 	},
 	"type": "module",
 	"main": "dist/index.cjs",
